--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
-<h1> Hello from Niranjan. I just completed my MIT Module 1 assignemtn 2!</h1>
+<h1> Hello from Niranjan. I just completed my MIT Module 1 assignment 2!</h1>
 
 </html>
